deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-web
spec:
  replicas: 4
  selector:
    matchLabels:
      app: ms-web
  template:
    metadata:
      labels:
        app: ms-web
    spec:
      containers:
      - name: ms-web-container
        image: nginx:latest
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "200m"
        volumeMounts:
        - name: ms-web-data
          mountPath: /usr/share/nginx/html/data
      volumes:
      - name: ms-web-data
        persistentVolumeClaim:
          claimName: ms-web-pvc
