service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-web-service
spec:
  selector:
    app: ms-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
